--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+django
+gunicorn
+django-heroku
+requests
 Flask==0.10.1
 gunicorn==19.4.5
 itsdangerous==1.1.0
@@ -5,3 +9,4 @@ Jinja2==2.10
 MarkupSafe==1.1.0
 pkg-resources==0.0.0
 Werkzeug==0.14.1
+
